-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Sharding
-
Fully Compatible
-
ALL
-
v4.0, v3.6
-
Sharding 2018-12-17
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Value returned from a function is not checked for errors before being used
Defect 105128 (STATIC_C)
Checker CHECKED_RETURN (subcategory none)
File: /src/mongo/db/s/migration_destination_manager.cpp
Function mongo::MigrationDestinationManager::_migrateDriver(mongo::OperationContext *)
/src/mongo/db/s/migration_destination_manager.cpp, line: 880
Calling "_applyMigrateOp" without checking return value (as is done elsewhere 1 out of 2 times).
_applyMigrateOp(opCtx, mods, &lastOpApplied);