SERVER-38196 do not wait for replication of mods if they were not applied